--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,8 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+build/
+.gradle/
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -142,4 +144,4 @@ hs_err_pid*
 
 ### Project Specific ###
 
-src/main/resources/application-dev.properties
+src/main/resources/application-dev.yaml
