--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,7 +1,7 @@
 racetime:
   api:
-    base-url: http://localhost:8000
-    websocket-base: ws://localhost:8000
+    base-url: https://racetime.gg
+    websocket-base: wss://racetime.gg
 
 spring:
   http:
@@ -13,5 +13,6 @@ logging:
     root: INFO
     de:
       scaramangado: INFO
-  file: race-announcer.log
-  file.max-history: 15
+  file:
+    name: race-announcer.log
+    max-history: 15
