Show 'Team Race' in footer

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,6 +2,7 @@ racetime:
   api:
     base-url: https://racetime.gg
     websocket-base: wss://racetime.gg
+  resolve-teams: true
 
 spring:
   http:
