Switch to GH Registry workflow

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,5 +14,12 @@ logging:
     de:
       scaramangado: INFO
   file:
-    name: race-announcer.log
-    max-history: 15
+    name: ./logs/race-announcer.log
+  logback:
+    rollingpolicy:
+      max-history: 30
+      file-name-pattern: ./logs/%d{yyyy-MM-dd}/race-announcer.%i.log
+      clean-history-on-start: true
+  pattern:
+    file: '%d{ISO8601} - %5p --- \[%18.18t\] %-40.40logger{39}:%-4.4L : %m%n'
+    console: %clr(%d{ISO8601}){faint} %clr(- %5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr(\[%18.18t\]){faint} %clr(%-40.40logger{39}:%-4.4L){cyan} %m%n
