--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,5 +21,5 @@ logging:
       file-name-pattern: ./logs/%d{yyyy-MM-dd}/race-announcer.%i.log
       clean-history-on-start: true
   pattern:
-    file: '%d{ISO8601} - %5p --- \[%18.18t\] %-40.40logger{39}:%-4.4L : %m%n'
-    console: %clr(%d{ISO8601}){faint} %clr(- %5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr(\[%18.18t\]){faint} %clr(%-40.40logger{39}:%-4.4L){cyan} %m%n
+    file:  '%d{ISO8601} - %5p --- [%18.18t] %-40.40logger{39}:%-4.4L : %m%n'
+    console: '%clr(%d{ISO8601}){faint} %clr(- %5p) %clr(${PID:- }){magenta} %clr(---){faint} %clr([%18.18t]){faint} %clr(%-40.40logger{39}:%-4.4L){cyan} %m%n'
