--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -2,6 +2,7 @@ version: '3.9'
 services:
   race-announcer:
     image: ghcr.io/scaramangado/rtgg-race-announcer/race-announcer:latest
+    container_name: race-announcer
     volumes:
       - /home/docker/volumes/race-announcer:/etc/announcer
     restart: unless-stopped
